--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,4 @@
-name: mysuperduperplugin
+name: armory/mysuperduperplugin
 description: My super plugin allows you to do stuff
 version: 1.2.3
 options:
