--- a/manifest.yml
+++ b/manifest.yml
@@ -13,3 +13,5 @@ options:
       - second
 jars:
 - https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-0.0.1-SNAPSHOT.jar
+deck:
+- https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-0.0.1-SNAPSHOT.jar
