chore(manifest): change from spin-<service> to <service> for resources (#16)

--- a/manifest.yml
+++ b/manifest.yml
@@ -12,7 +12,7 @@ options:
       - first
       - second
 resources:
-  spin-orca:
+  orca:
   - https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-0.0.1-SNAPSHOT.jar
-  spin-deck:
+  deck:
   - https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-ui-0.0.1-SNAPSHOT.js
