fix(*): make stage random wait stage (#17)
* fix(backend): made the backend work with the frontend

* fix(frontend): make frontend talk to backend

* chore(build): updated jar

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 }
 
-group = 'io.armory.spinnaker'
+group = 'com.netflix.spinnaker.plugin'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
