--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "@spinnaker/plugins": "latest"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
