fix(manifest): match how OSS works

--- a/manifest.yml
+++ b/manifest.yml
@@ -11,8 +11,5 @@ options:
     list:
       - first
       - second
-resources:
-  orca:
-  - https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-0.0.1-SNAPSHOT.jar
-  deck:
-  - https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-ui-0.0.1-SNAPSHOT.js
+jars:
+- https://stage-plugin-test.s3-us-west-2.amazonaws.com/stage-plugin-0.0.1-SNAPSHOT.jar
