--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "react": "^15.0.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0",
-    "@spinnaker/plugins": "latest"
+    "@spinnaker/plugins": "armory/plugin-ui#master"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
