--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,46 +22,22 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
-    "@spinnaker/plugins": "armory/plugin-ui#master"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "@spinnaker/core": "0.0.432",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^22.4.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.9",
-    "jest": "^22.4.0",
-    "node-sass": "^4.7.2",
-    "postcss-scss": "^1.0.3",
-    "react-test-renderer": "^16.2.0",
-    "rollup": "^0.56.2",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-commonjs": "^8.3.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^3.0.3",
-    "rollup-plugin-postcss": "^1.2.8",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.24.0",
-    "rollup-watch": "^4.3.1",
-    "style-loader": "^0.20.2",
-    "typescript": "^3.6.2",
-    "url-loader": "^0.6.2"
+    "@types/react": "^16.9.13",
+    "formik": "^2.0.6",
+    "rollup": "^1.27.5",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-external-globals": "^0.4.0",
+    "rollup-plugin-less": "^1.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-typescript": "^1.0.0",
+    "tslib": "^1.9.3",
+    "typescript": "^3.2.2"
   },
   "files": [
     "dist"
